vest-dsl/test/bad/const_byte_array_value_range2.vest
const BAR: [u8; 4] = [999; 4]
